--- a/package.json
+++ b/package.json
@@ -4,19 +4,26 @@
   "private": true,
   "homepage": ".",
   "dependencies": {
+    "@emotion/core": "^11.0.0",
     "@emotion/styled": "^11.10.5",
+    "@mui/material": "^5.11.5",
     "@reduxjs/toolkit": "^1.9.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
+    "axios": "^1.2.3",
     "country-list": "^2.3.0",
+    "google-map-react": "^2.2.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
     "react-jvectormap": "^0.0.16",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
+    "react-test-renderer": "^18.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
